fix speaker spacing

--- a/app/styles/modules/_variables.scss
+++ b/app/styles/modules/_variables.scss
@@ -81,7 +81,7 @@ $speaker-sizes: (
 	"desktop": 3
 );
 $speaker-horizontal-spacing: 10%;
-$speaker-vertical-spacing: 15%;
+$speaker-vertical-spacing: 7%;
 $speaker-font-size: 1.2rem;
 $speaker-header-vertical-spacing: 2rem, 1.2rem;
 $speaker-header-inner-vertical-spacing: 0.3rem;
